--- a/index.html
+++ b/index.html
@@ -1,54 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google" content="notranslate" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
-    <link rel="icon" type="image/png" href="assets/images/favicon.png?v=1">
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/product-style.css" />
-    <script src="assets/js/translations.js"></script>
-    <script src="assets/js/language.js"></script>
-    <script src="assets/js/language-selector-loader.js"></script>
-    <title>Kalpavriksha Dashboard Login</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kalpavriksha Pvt Ltd</title>
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <div id="navbar-placeholder"></div>
 
-  <body>
-    <div class="container" id="container">
-      <div class="form-container sign-in">
-        <form>
-          <div class="logo">
-            <img src="assets/images/logo.png" alt="Kalpavriksha Logo" class="logo-img" />
-            <h2>Kalpavriksha</h2>
+  <section id="home" class="hero">
+    <div class="overlay">
+      <div class="hero-content">
+        <h2 data-i18n="hero-title">Transforming Agriculture Through Innovation</h2>
+        <p data-i18n="hero-subtitle">Empowering farmers with AI-driven precision tools for a sustainable future.</p>
+        <div class="cta-buttons">
+           <a href="#products" class="btn" data-i18n="explore">Explore Our Products</a>
           </div>
-          <h1 data-i18n="loginTitle">Kalpavriksha Dashboard Login</h1>
-          <p class="sub-header" data-i18n="loginSubHeader">Monitor your systems with real-time data</p>
-          <div class="input-group">
-            <input type="text" id="uniqueCode" data-i18n="uniqueCodePlaceholder" placeholder="Enter Unique Code" />
-            <span class="tooltip-wrapper">
-              <i class="fa-solid fa-circle-info info-icon"></i>
-              <span class="tooltip-content" data-i18n="uniqueCodeTooltip">
-                Enter your client access key provided by your administrator
-              </span>
-            </span>
-          </div>
-          <select id="productSelect">
-            <option value="" disabled selected data-i18n="selectProduct">Select Product</option>
-            <option value="Kalpavriksha-soil" data-i18n="productSoil">Kalpavriksha  Soil Quality Sensor</option>
-            <option value="smart-drip" data-i18n="productDrip">Smart Drip Irrigation Mechanism</option>
-            <option value="Kalpavriksha-drone" data-i18n="productDrone">Kalpavriksha Agricultural Drone</option>
-          </select>
-          <div class="error-message" id="errorMessage"></div>
-          <button type="submit" data-i18n="accessDashboard">Access Dashboard</button>
-          <a href="#" class="help-link" data-i18n="helpLink">Lost Product ID? Contact Support</a>
-        </form>
       </div>
     </div>
+  </section> 
 
-    <script src="assets/js/script.js"></script>
-  </body>
+  <section id="about" class="about">
+    <div class="container about-container">
+      <div class="about-text">
+        <h3 data-i18n="about-title">About Us</h3>
+        <p data-i18n="about-text-1">Kalpavriksha Pvt Ltd is a <strong>pioneer in agri-tech innovation</strong>, dedicated to transforming modern farming with <strong>advanced sensor technology and AI solutions</strong>.</p>
+        <p data-i18n="about-text-2">From humble beginnings to becoming a <strong>trusted name in precision agriculture</strong>, our journey reflects our unwavering commitment to <strong>farmers' prosperity and environmental sustainability</strong>.</p>
+        <a href="about.html" class="cta-link" data-i18n="read-story">Read Our Full Story</a>
+      </div>
+      <div class="about-image">
+        <img src="images/About us.png" alt="Modern Agriculture Technology">
+      </div>
+    </div>
+  </section>
+
+  <section id="data-monitoring" class="data-monitoring">
+    <div class="container">
+      <h3 data-i18n="data-monitor-title">Data We Monitor</h3>
+      <div class="data-grid">
+        <div class="data-card">
+          <img src="images/Light condition.png" alt="Light Condition">
+          <h4 data-i18n="light-condition">Light Condition</h4>
+          <p data-i18n="light-desc">Real-time tracking of sunlight exposure to ensure optimal photosynthesis.</p>
+        </div>
+        <div class="data-card">
+          <img src="images/Soil health.png" alt="Soil Health">
+          <h4 data-i18n="soil-health">Soil Health</h4>
+          <p data-i18n="soil-desc">Continuous analysis of soil nutrients, moisture, and pH levels.</p>
+        </div>
+        <div class="data-card">
+          <img src="images/Growth analysis.png" alt="Growth Analysis">
+          <h4 data-i18n="growth-analysis">Growth Analysis</h4>
+          <p data-i18n="growth-desc">AI-powered insights into plant growth stages and potential issues.</p>
+        </div>
+        <div class="data-card">
+          <img src="images/water usage.png" alt="Water Usage">
+          <h4 data-i18n="water-usage">Water Usage</h4>
+          <p data-i18n="water-desc">Smart monitoring of water consumption to optimize irrigation efficiency.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="products" class="products">
+    <div class="container">
+      <h3 data-i18n="flagship-products">Our Flagship Products</h3>
+      <div class="product-grid">
+        <div class="product-card">
+          <img src="images/soil sensor.png" alt="Soil Quality Sensor">
+          <h4 data-i18n="soil-sensor">Soil Quality Sensor</h4>
+          <p data-i18n="soil-sensor-desc">Measure pH, nutrients, and sunlight with precision using our Tusmad 3-in-1 Sensor — empowering soil health optimization for any farm.</p>
+          <a href="products.html#soil-sensor" class="product-cta" data-i18n="learn-more">Learn More</a>
+        </div>
+        <div class="product-card">
+          <img src="images/Drip irrigation.png" alt="Advanced Drip Irrigation">
+          <h4 data-i18n="drip-irrigation">Advanced Drip Irrigation</h4>
+          <p data-i18n="drip-desc">Smart sensors detect dry zones and deliver precise hydration, conserving water while maximizing yield consistency.</p>
+          <a href="products.html#drip-irrigation" class="product-cta" data-i18n="learn-more">Learn More</a>
+        </div>
+        <div class="product-card">
+          <img src="images/Verdant drone.png" alt="Verdant Drone">
+          <h4 data-i18n="verdant-drone">Verdant Drone</h4>
+          <p data-i18n="drone-desc">Autonomous aerial system for crop monitoring, pest detection, and weather-based insights to guide effective farm management.</p>
+          <a href="products.html#drone" class="product-cta" data-i18n="learn-more">Learn More</a>
+        </div>
+        <div class="product-card">
+          <img src="images/Agritech app.png" alt="AgriTech App">
+          <h4 data-i18n="agritech-app">Kalpavriksha AgriTech App</h4>
+          <p data-i18n="app-desc">Monitor your fields, track data, and receive real-time alerts — seamlessly connecting all Verdant products for smarter decisions.</p>
+          <a href="https://ashwatthamma.github.io/Kalparvriksha-industries-1/" target="_blank" class="product-cta" data-i18n="learn-more">Learn More</a>
+        </div>
+      </div>
+    </div>
+  </section>
+    </div>
+  </section>
+
+  <div id="footer-placeholder"></div>
+  
+  <script src="js/script.js"></script>
+</body>
 </html>
